# neutronics_calphad

./: .cursorrules  .gitignore  README.md  environment.yml  pyproject.toml  run_tests.py  setup.py
debugging/: check_gas_production_chain.py  check_geometry.py  check_neutron_flux.py  debug_depletion_api.py  debug_materials.py  debug_source_fixed.py  debug_source_position.py  diagnose_neutron_transport.py  geometry_simple.py  neutronics_analysis_results.csv  pre_build_checklist.py  quick_debug.py  test_10year_issue.py  test_fix_verification.py  test_fixed_boundaries.py  test_photon_decay.py  test_photon_energy.py  test_simple_source.py  test_single_element.py  visualize_source_overlap.py
examples/: README_bayesian_optimization.md  analysis_notebook.ipynb  analyze_bo_results.py  bayesian_optimization_workflow.py  example_usage.ipynb  run_bo_composition_search.py  run_fispact_depletion.py  run_restarted_bo_search.py  sequential_neutronics_pipeline.py
fispact_comparison/: 1_generate_flux.py  1_get_flux_and_xs.py  2_run_fispact.py  2_run_openmc_depletion.py  3_analyze_fispact_output.py  3_compare_results.py  4_compare_results.py  collapsed_microxs_fispact.csv  ebins.tar.bz2  fispact_flux_1102.txt  printlib.out  vv_volume.txt
neutronics_calphad/: __init__.py  calphad.py  cli.py  config.py  depletion.py  dose.py  driver.py  evaluate.py  flux.py  geometry_maker.py  io.py  library.py  manifold.py  visualization.py
tests/: README.md  __init__.py  conftest.py  test_activation_manifold.py  test_bayesian_searcher.py  test_calphad_batch.py  test_depletion_result.py  (+2 more)
(+23 files in other folders)
