[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neutronics-calphad"
version = "0.1.0"
description = "Neutronics simulations for CALPHAD-based alloy optimization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["neutronics", "openmc", "tokamak", "nuclear", "materials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openmc",
    "openmc-plasma-source", 
    "openmc-regular-mesh-plotter",
    "matplotlib",
    "numpy",
    "h5py",
    "pandas",
    "umap-learn",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "jupyter",
]

[project.scripts]
neutronics-calphad = "neutronics_calphad.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/neutronics-calphad"
Repository = "https://github.com/yourusername/neutronics-calphad.git"

[tool.setuptools]
packages = ["neutronics_calphad"] 